--- a/style.css
+++ b/style.css
@@ -54,21 +54,11 @@ nav ul li:hover{
 }
 .socials{
     width: 320px;
-    margin-left: 10px;
-    margin-top: 10px;
+    display: flex;
+    justify-content: space-evenly;
 }
 .socials img{
     max-width: 40px;
-}
-.cv{
-    padding: 8px 6px;
-    vertical-align: top;
-    margin-top: 5px;
-    margin-left: 20px;
-    background-color: rgb(36 32 33);
-    color: rgb(250 238 246);
-    border: none;
-    border-radius: 6px;
 }
 .main1{
     display: flex;
@@ -214,19 +204,10 @@ h3{
     }
     .main1 .socials{
         margin-top: 10px;
+        margin-left: 25%;
     }
     .main1 .left .socials img{
-        width: 25px;
-        margin-left: 16px;
-    }
-    .main1 .left .socials button{
-        width: 70px;
-        height: 25px;
-        padding: 0;
-        font-size: 10px;
-        margin-top: 0;
-        margin-left: 16px;
-        margin-bottom: 30px;
+        width: 30px;
     }
     .main1 .right{
         display: block;
